WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211290
Receiving WebRTC network packets should not go through the main thread
https://bugs.webkit.org/show_bug.cgi?id=211290
Summary
Receiving WebRTC network packets should not go through the main thread
youenn fablet
Reported
2020-05-01 07:27:11 PDT
Receiving WebRTC network packets should not go through the main thread
Attachments
Patch
(40.67 KB, patch)
2020-05-01 07:44 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(40.95 KB, patch)
2020-05-01 09:30 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(47.78 KB, patch)
2020-05-01 10:17 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(47.83 KB, patch)
2020-05-04 08:01 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(48.07 KB, patch)
2020-05-05 01:18 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
WinCairo build fix
(48.07 KB, patch)
2020-05-05 02:53 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-05-01 07:44:32 PDT
Created
attachment 398184
[details]
Patch
youenn fablet
Comment 2
2020-05-01 09:30:56 PDT
Created
attachment 398190
[details]
Patch
youenn fablet
Comment 3
2020-05-01 10:17:07 PDT
Created
attachment 398196
[details]
Patch
youenn fablet
Comment 4
2020-05-04 08:01:35 PDT
Created
attachment 398362
[details]
Patch
Alex Christensen
Comment 5
2020-05-04 10:22:30 PDT
Comment on
attachment 398362
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=398362&action=review
> Source/WebKit/WebProcess/Network/webrtc/LibWebRTCNetwork.cpp:119 > + if (auto* socket = m_socketFactory.socket(identifier))
You should probably add assertions to these. ASSERT(!RunLoop::isMain());
youenn fablet
Comment 6
2020-05-05 01:18:07 PDT
Created
attachment 398489
[details]
Patch for landing
youenn fablet
Comment 7
2020-05-05 02:53:43 PDT
Created
attachment 398494
[details]
WinCairo build fix
EWS
Comment 8
2020-05-05 06:40:09 PDT
Committed
r261163
: <
https://trac.webkit.org/changeset/261163
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398494
[details]
.
Radar WebKit Bug Importer
Comment 9
2020-05-05 06:41:13 PDT
<
rdar://problem/62886328
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug